; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/connection/extr_remote_commands.c_SendRemoteCommandParams.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/connection/extr_remote_commands.c_SendRemoteCommandParams.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }

@CONNECTION_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SendRemoteCommandParams(%struct.TYPE_4__* %0, i8* %1, i32 %2, i32* %3, i8** %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i8**, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i8** %4, i8*** %11, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  store i32* %16, i32** %12, align 8
  store i32 0, i32* %13, align 4
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = call i32 @LogRemoteCommand(%struct.TYPE_4__* %17, i8* %18)
  %20 = load i32*, i32** %12, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %27

22:                                               ; preds = %5
  %23 = load i32*, i32** %12, align 8
  %24 = call i64 @PQstatus(i32* %23)
  %25 = load i64, i64* @CONNECTION_OK, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %22, %5
  store i32 0, i32* %6, align 4
  br label %39

28:                                               ; preds = %22
  %29 = load i32*, i32** %12, align 8
  %30 = call i32 @PQisnonblocking(i32* %29)
  %31 = call i32 @Assert(i32 %30)
  %32 = load i32*, i32** %12, align 8
  %33 = load i8*, i8** %8, align 8
  %34 = load i32, i32* %9, align 4
  %35 = load i32*, i32** %10, align 8
  %36 = load i8**, i8*** %11, align 8
  %37 = call i32 @PQsendQueryParams(i32* %32, i8* %33, i32 %34, i32* %35, i8** %36, i32* null, i32* null, i32 0)
  store i32 %37, i32* %13, align 4
  %38 = load i32, i32* %13, align 4
  store i32 %38, i32* %6, align 4
  br label %39

39:                                               ; preds = %28, %27
  %40 = load i32, i32* %6, align 4
  ret i32 %40
}

declare dso_local i32 @LogRemoteCommand(%struct.TYPE_4__*, i8*) #1

declare dso_local i64 @PQstatus(i32*) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @PQisnonblocking(i32*) #1

declare dso_local i32 @PQsendQueryParams(i32*, i8*, i32, i32*, i8**, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
